--- a/src/components/UI/modal/modal.scss
+++ b/src/components/UI/modal/modal.scss
@@ -55,6 +55,27 @@
     box-shadow: 0px 6px 18px -5px rgba(237, 103, 85, 1);
   }
 }
+.textarea {
+  margin: 10px 10px;
+  height: 140px;
+  padding: 0.71429rem;
+  border-radius: 3px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #b7cad6;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  width: 100%;
+  min-width: 300px;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #dde2e4;
+  border-radius: 8px;
+  &:focus {
+    outline: 1px;
+    border: 1px solid #e0e2e2;
+  }
+}
 
 .input:focus {
   outline: none;
